--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,9 +1,16 @@
 #hero{
     height: 100vh;
-    background: pink;
-    display: inline-block;
+    background: var(--color-light-pink);
+    display: grid;
+    align-items: center;
     width: 100%;
 
+}
+
+h1{
+    margin: var(--space-big);
+    text-align: center;
+    padding: 0;
 }
 
 #about{
