--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -5,17 +5,74 @@ html{
 body{
     margin: 0;
     padding: 0;
-    font-family: Arial;
+    font-family: Roboto;
+}
+
+/* Mobile */
+h1{
+    font-size: 34px;
+    font-weight: normal;
+    line-height: 41px;
+}
+
+h2{
+    font-size: 22px;
+    font-weight: normal;
+    line-height: 22px;
+}
+
+h3{
+    font-size: 17px;
+    font-weight: bold;
+    line-height: 22px;
+}
+
+p{
+    font-size: 17px;
+    font-weight: normal;
+    line-height: 22px;
+}
+
+ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+}
+
+li{
+    float: left;
+    margin-top: 8px;
+}
+
+a{
+    font-size: 14px;
+    font-weight: thin;
+    margin-right: var(--space-small);
+    margin-left: var(--space-small);
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
 }
 
 nav{
+    padding: var(--space-small);
     width: 100%;
     background: #262626;
     overflow: hidden;
     position: fixed;
-    top:0;
     display: grid;
     justify-items: center;
+
+}
+
+.navigation img{
+    width: 40px;
+    height: auto;
+    margin-top: 0;
 }
 
 footer{
@@ -25,30 +82,4 @@ footer{
     bottom: 0;
     display: grid;
     justify-items: center;
-}
-
-ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-li{
-    float: left;
-}
-
-a{
-    font-size: 10px;
-    padding: 8px;
-    display: block;
-    text-decoration: none;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
-}
-
-h1{
-    margin: 50px;
-    text-align: center;
-    padding: 0;
 }
