--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,4 +4,8 @@
     --space-medium: 16px;
     --space-big: 24px;
     --space-bigger: 48px;
+    --color-light-pink: #F0ECF0;
+    --color-dusty-pink: #AB9EAC;
+    --color-dark-purple: #524B53;
+    --color-very-dark-purple: #2E1E2F;
 }
