--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,44 +1,48 @@
 #hero{
-    height: 100vh;
+    min-height: 100vh;
     background: var(--color-light-pink);
     display: grid;
     align-items: center;
     width: 100%;
-
 }
 
-h1{
-    margin: var(--space-big);
+#hero h1{
+
     text-align: center;
     padding: 0;
 }
 
 #about{
-    height: 100vh;
-    background: yellow;
-    display: inline-block;
-    width: 100%
+    min-height: 100vh;
+    background: white;
+    display: grid;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
-
+#about img{
+    width: 320px ;
+}
 
 #projects{
-    height: 100vh;
-    background: purple;
+    min-height: 100vh;
+    background: var(--color-light-pink);
     display: inline-block;
     width: 100%
 }
 
 #tech{
-    height: 100vh;
-    background: blue;
+    min-height: 100vh;
+    background: white;
     display: inline-block;
     width: 100%
 }
 
 #contact{
-    height: 100vh;
-    background: red;
+    min-height: 100vh;
+    background: var(--color-light-pink);
     display: grid;
     align-items: flex-end;
     width: 100%
