--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -13,12 +13,6 @@ h1{
     font-size: 34px;
     font-weight: normal;
     line-height: 41px;
-    margin-top: 50px;
-    margin-right: var(--space-medium);
-    margin-left: var(--space-medium);
-    margin-bottom: 0;
-    text-align: left;
-    padding: 0;
 }
 
 h2{
@@ -37,26 +31,10 @@ p{
     font-size: 17px;
     font-weight: normal;
     line-height: 22px;
-    margin-right: var(--space-medium);
-    margin-left: var(--space-medium);
-    margin-bottom: 0;
+    margin: var(--space-medium);
 }
 
-/* Shared with Nav and Footer*/ 
-ul{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    padding: 0;
-}
-
-li{
-    display: flex;
-    justify-items: center;
-}
-
-a{
+.navigation a{
     font-size: 14px;
     font-weight: thin;
     margin-right: var(--space-small);
@@ -66,40 +44,9 @@ a{
     font-weight: bold;
 }
 
-/*Nav*/
-nav{
-    width: 100vw;
-    height: 50px;
-    background: var(--color-dusty-pink);
-    overflow: hidden;
-    position: fixed;
+#contact a{
+    text-decoration: none;
 }
 
-.navigation img{
-    width: 40px;
-    height: auto;
-    margin-top: 0;
-}
 
-.navigation ul{
-    background-color: var(--color-dark-purple);
-    width: 100vw;
-    height: 20px;
-    display: flex;
-    justify-content: center;
-}
 
-/*Footer*/
-footer{
-    width: 100%;
-    background: var(--color-dusty-pink);
-    overflow: hidden;
-    bottom: 0;
-    display: grid;
-    justify-items: center;
-}
-
-.footer p{
-    margin: var(--space-medium);
-    color: white;
-}
