--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,6 +1,7 @@
+/*Shared in content*/
 .content-section{
     min-height: 100vh;
-    display: grid;
+    display: inline-block;
     align-items: center;
     width: 100%;
     padding: 0;
@@ -8,7 +9,7 @@
 }
 
 .content-section h2{
-    margin-top: 55px;
+    margin-top: 50px;
     margin-right: var(--space-medium);
     margin-left: var(--space-medium);
     margin-bottom: var(--space-big);
@@ -16,6 +17,7 @@
     padding: 0;
 }
 
+/*Hero*/
 #hero{
     min-height: 100vh;
     background: var(--color-light-pink);
@@ -30,6 +32,7 @@
     margin: var(--space-medium);
 }
 
+/*About me*/
 #about{
     background: white;
 }
@@ -40,24 +43,21 @@
 }
 
 .about-image{
-    display: flex;
+    display: inline-block;
     justify-content: center;
 }
 
+/*Projects*/
 #projects{
-    min-height: 100vh;
     background: var(--color-light-pink);
-    display: inline-block;
-    width: 100%
 }
 
+/*Technologies*/
 #tech{
-    min-height: 100vh;
     background: white;
-    display: inline-block;
-    width: 100%
 }
 
+/*Contact me*/
 .contact-section{
     display: grid;
     justify-content: center;
