--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -34,7 +34,7 @@
 
 /*About me*/
 #about{
-    background: pink;
+    background: white;
 }
 
 #about img{
@@ -59,7 +59,7 @@
 
 /*Technologies*/
 #tech{
-    background: pink;
+    background: white;
 }
 
 /*Contact me*/
