add content, edit finished and unfinished projects card, edit Project section styles

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -9,7 +9,7 @@
 }
 
 .content-section h2{
-    margin-top: 50px;
+    margin-top: 60px;
     margin-right: var(--space-medium);
     margin-left: var(--space-medium);
     margin-bottom: var(--space-big);
@@ -49,12 +49,48 @@
 
 /*Projects*/
 #projects img{
-    width: 150px;
+    width: 130px;
     height: auto;
+    border-radius: 8px;
+    padding: 0;
+}
+
+.overlayed img{
+    opacity: 0.8;
+}
+
+.overlay-text{
+    display: flex;
+    position: absolute;
+    margin-top: 20px;
+
+}
+
+.overlay-text p{
+    font-size: 14px;
+
+    color: white;
+    text-transform: uppercase;
+    z-index: 900;
+
+}
+
+#projects h3{
+    margin-bottom: var(--space-small);
+    margin: 0;
 }
 
 #projects{
     background: var(--color-light-pink);
+}
+
+.projects-section{
+    padding: var(--space-medium);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: var(--space-small);
+    grid-row-gap: var(--space-small);
+
 }
 
 /*Technologies*/
