--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -21,6 +21,7 @@
 #hero{
     min-height: 100vh;
     background: var(--color-light-pink);
+    color: var(--color-very-dark-purple);
     display: grid;
     align-items: center;
     width: 100%;
@@ -35,6 +36,7 @@
 /*About me*/
 #about{
     background: white;
+    color: var(--color-very-dark-purple);
 }
 
 #about img{
@@ -80,6 +82,7 @@
 
 #projects{
     background: var(--color-light-pink);
+    color: var(--color-very-dark-purple);
 }
 
 .projects-section{
@@ -94,6 +97,27 @@
 /*Technologies*/
 #tech{
     background: white;
+    color: var(--color-very-dark-purple);
+}
+
+.tech-card{
+    margin: var(--space-medium);
+}
+
+.tech-card img{
+    height: 44px;
+    width: auto;
+}
+
+.tech-card h3{
+    margin: 0;
+    padding: 0;
+}
+
+.grid-technologies{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
 }
 
 /*Contact me*/
@@ -124,6 +148,10 @@
 
 .contact-section li{
     margin-bottom: var(--space-small);
+}
+
+.contact-section{
+    color: var(--color-very-dark-purple);
 }
 
 #contact a{
