--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -36,11 +36,19 @@
 }
 
 .pills{
-    border: 1px solid #524B53;
+    border: 1px solid var(--color-dusty-pink);
     box-sizing: border-box;
     border-radius: 100px;
     margin: 2px;
     padding: 2px;
+}
+
+#modal-popup h2{
+    color: var(--color-very-dark-purple);
+}
+
+#modal-popup p{
+    color: var(--color-very-dark-purple);
 }
 
 #technologies-list{
@@ -101,4 +109,8 @@ display: grid;
     left: 87%;
     border: 2px solid var(--color-very-dark-purple);
     background-color: white;
+}
+
+#technologies-list{
+    color: var(--color-dark-purple);
 }
