--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,42 +1,49 @@
-nav{
-    width: 100vw;
-    height: 50px;
-    background: var(--color-dusty-pink);
-    overflow: hidden;
-    position: fixed;
-    z-index: 1000;
+nav {
+  width: 100vw;
+  height: 50px;
+  background: var(--color-dusty-pink);
+  overflow: hidden;
+  position: fixed;
+  z-index: 1000;
 }
 
-.navigation ul{
-    list-style: none;
-    align-items: center;
-    text-align: center;
-    padding: 0;
-    background-color: var(--color-dark-purple);
-    width: 100vw;
-    height: 20px;
-    display: flex;
-    justify-content: center;
+.navigation ul {
+  list-style: none;
+  align-items: center;
+  text-align: center;
+  padding: 0;
+  background-color: var(--color-dark-purple);
+  width: 100vw;
+  height: 20px;
+  display: flex;
+  justify-content: center;
 }
 
-.navigation li{
-    display: flex;
-    justify-items: center;
+.navigation li {
+  display: flex;
+  justify-items: center;
 }
 
-.navigation img{
-    width: 40px;
-    height: auto;
-    margin-top: 0;
+.navigation img {
+  width: 40px;
+  height: auto;
+  margin-top: 0;
 }
 
-.navigation a{
-    font-size: 14px;
-    font-weight: thin;
-    margin-right: var(--space-small);
-    margin-left: var(--space-small);
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
+.navigation a {
+  font-size: 14px;
+  font-weight: thin;
+  margin-right: var(--space-small);
+  margin-left: var(--space-small);
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
 }
 
+@media (min-width: 750px) {
+  .navigation a {
+    font-size: 18px;
+    margin-right: var(--space-big);
+    margin-left: var(--space-big);
+  }
+}
