--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -1,41 +1,61 @@
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    font-family: Roboto;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
 }
 
 /* Mobile */
-h1{
-    font-size: 34px;
-    font-weight: normal;
-    line-height: 41px;
+h1 {
+  font-size: 34px;
+  font-weight: normal;
+  line-height: 41px;
 }
 
-h2{
-    font-size: 22px;
-    font-weight: normal;
-    line-height: 22px;
+h2 {
+  font-size: 22px;
+  font-weight: normal;
+  line-height: 22px;
 }
 
-h3{
-    font-size: 17px;
+h3 {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 22px;
+}
+
+p {
+  font-size: 17px;
+  font-weight: normal;
+  line-height: 22px;
+  margin: var(--space-medium);
+}
+
+@media (min-width: 750px) {
+  h1 {
+    font-size: 50px;
+    font-weight: normal;
+    line-height: 48px;
+  }
+
+  h2 {
+    font-size: 42px;
+    font-weight: normal;
+    line-height: 40px;
+  }
+
+  h3 {
+    font-size: 24px;
     font-weight: bold;
-    line-height: 22px;
-}
+    line-height: 28px;
+  }
 
-p{
-    font-size: 17px;
+  p {
+    font-size: 18px;
     font-weight: normal;
-    line-height: 22px;
-    margin: var(--space-medium);
+    line-height: 24px;
+  }
 }
-
-
-
-
-
-
