--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -171,6 +171,11 @@
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
   }
+
+  #about img {
+    min-width: 480px;
+    min-height: 342px;
+  }
 }
 
 /*Desktop queries*/
@@ -182,8 +187,8 @@
   }
 
   #about img {
-    width: 540px;
-    height: 385px;
+    min-width: 480px;
+    min-height: 342px;
   }
 
   #hero h1 {
