--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,8 +1,12 @@
 nav {
   width: 100vw;
-  height: 50px;
-  background: var(--color-dusty-pink);
+  height: 70px;
+  background: var(--color-dark-purple);
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
   position: fixed;
   z-index: 1000;
 }
@@ -12,7 +16,6 @@ nav {
   align-items: center;
   text-align: center;
   padding: 0;
-  background-color: var(--color-dark-purple);
   width: 100vw;
   height: 20px;
   display: flex;
@@ -25,9 +28,8 @@ nav {
 }
 
 .navigation img {
-  width: 40px;
+  width: 50px;
   height: auto;
-  margin-top: 0;
 }
 
 .navigation a {
@@ -46,4 +48,5 @@ nav {
     margin-right: var(--space-big);
     margin-left: var(--space-big);
   }
+
 }
