--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 html {
   scroll-behavior: smooth;
 }
@@ -5,7 +7,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* Mobile */
