--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,28 +1,22 @@
 /*Shared in content*/
-.content-left {
-  align-items: flex-start;
-}
-
-.content-right {
-  align-items: center;
-}
-
 .content-section {
+  width: 100vw;
   display: grid;
-  align-items: center;
-  justify-items: center;
-  width: 100%;
-  padding: 0;
+  justify-content: center;
   margin: 0;
+  padding: 0;
+  padding-top: var(--space-bigger);
+  padding-bottom: var(--space-bigger);
 }
 
 .content-section h2 {
-  margin-top: 60px;
-  margin-right: var(--space-medium);
-  margin-left: var(--space-medium);
-  margin-bottom: var(--space-big);
-  text-align: left;
-  padding: 0;
+  margin: 0;
+  padding: var(--space-medium);
+}
+
+.content-section p {
+  margin: 0;
+  padding: var(--space-medium);
 }
 
 /*Hero*/
@@ -47,19 +41,17 @@
 
 /*About me*/
 #about {
-  background: white;
-  color: var(--color-very-dark-purple);
-  margin-bottom: 60px;
+  background-color: white;
 }
-
 #about img {
-  width: 80%;
-  padding: var(--space-small);
+  width: 60%;
+  border-radius: 8px;
 }
 
 #about-image {
   display: grid;
   justify-items: center;
+  align-content: center;
 }
 
 /*Projects*/
@@ -97,20 +89,20 @@
   color: var(--color-very-dark-purple);
 }
 
-.projects-section {
+#projects-section {
   padding: var(--space-medium);
   display: grid;
+  text-align: left;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: var(--space-small);
   grid-row-gap: var(--space-small);
-  margin-bottom: 60px;
+
 }
 
 /*Technologies*/
 #tech {
-  background: white;
+  background-color: white;
   color: var(--color-very-dark-purple);
-  margin-bottom: 60px;
 }
 
 .tech-card {
@@ -127,44 +119,33 @@
   padding: 0;
 }
 
-.grid-technologies {
+#grid-technologies {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  text-align: center;
+  text-align: left;
 }
 
 /*Contact me*/
-.contact-section {
+#contact {
+  background-color: var(--color-light-pink);
   display: grid;
   justify-content: center;
-  margin-bottom: var(--space-big);
-  margin-bottom: 60px;
 }
 
-.contact-section ul {
+.content-section ul {
   margin: var(--space-medium);
   padding: 0;
   list-style: none;
 }
 
-#contact {
-  min-height: 100%;
-  background: var(--color-light-pink);
-
-  width: 100%;
-}
 
 #contact img {
   width: 24px;
   margin-right: var(--space-small);
 }
 
-.contact-section li {
+.content-section li {
   margin-bottom: var(--space-small);
-}
-
-.contact-section {
-  color: var(--color-very-dark-purple);
 }
 
 #contact a {
@@ -176,14 +157,19 @@
 
 /*Tablet queries*/
 @media (min-width: 550px) {
-  .projects-section {
-    grid-template-columns: repeat(3, 1fr);
+  .content-grid{
+    max-width: 550px;
   }
 
-  .grid-technologies {
+  #projects-section {
+    grid-template-columns: repeat(3, 1fr);
+    text-align: left;
+  }
+
+  #grid-technologies {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    text-align: center;
+    text-align: left;
   }
 
   #about img {
@@ -194,6 +180,14 @@
 
 /*Desktop queries*/
 @media (min-width: 750px) {
+  .content-grid {
+    max-width: 750px;
+  }
+
+  .content-section {
+    padding-top: 0;
+  }
+
   .content-section h2 {
     margin-top: 90px;
   }
@@ -202,7 +196,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-    max-width: 750px;
+    
   }
 
   #hero h1 {
@@ -213,7 +207,7 @@
   }
 
   #about img {
-    width: 100%;
+    width: 80%;
   }
 
 }
