--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,12 +1,10 @@
 nav {
   width: 100vw;
-  height: 70px;
+  height: 60px;
   background: var(--color-dark-purple);
   overflow: hidden;
   display: flex;
   align-items: center;
-  text-align: center;
-  justify-content: center;
   position: fixed;
   z-index: 1000;
 }
@@ -30,6 +28,7 @@ nav {
 .navigation img {
   width: 50px;
   height: auto;
+  float: left;
 }
 
 .navigation a {
@@ -49,4 +48,7 @@ nav {
     margin-left: var(--space-big);
   }
 
+  nav {
+    height: 80px;
+  }
 }
