edit desktop and tablet queries for a modal

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -127,6 +127,7 @@
 
 /*Contact me*/
 #contact {
+  width: 100vw;
   background-color: var(--color-light-pink);
   display: grid;
   justify-content: center;
@@ -179,7 +180,7 @@
 }
 
 /*Desktop queries*/
-@media (min-width: 750px) {
+@media (min-width: 992px) {
   .content-grid {
     max-width: 750px;
   }
