--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -36,7 +36,8 @@ p {
   margin: var(--space-medium);
 }
 
-@media (min-width: 750px) {
+/*Desktop queries*/
+@media (min-width: 992px) {
   h1 {
     font-size: 50px;
     font-weight: normal;
