change component tree, screenshots for readme, edit comments

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,6 @@
 @import "./shared.css";
 
 @import "./content.css";
-@import "./nav.css";
+@import "./navigation.css";
 @import "./footer.css";
 @import "./modal.css";
