--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -21,7 +21,11 @@
 
 /*Hero*/
 #hero {
-  background-image: radial-gradient(rgba(0, 0, 0, 0.7), rgba(255,255,255,0.1)), url("../assets/photos/home-picture.jpg");
+  background-image: radial-gradient(
+      rgba(0, 0, 0, 0.7),
+      rgba(255, 255, 255, 0.1)
+    ),
+    url("../assets/photos/home-picture.jpg");
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -96,7 +100,6 @@
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: var(--space-small);
   grid-row-gap: var(--space-small);
-
 }
 
 /*Technologies*/
@@ -139,7 +142,6 @@
   list-style: none;
 }
 
-
 #contact img {
   width: 24px;
   margin-right: var(--space-small);
@@ -158,7 +160,7 @@
 
 /*Tablet queries*/
 @media (min-width: 550px) {
-  .content-grid{
+  .content-grid {
     max-width: 550px;
   }
 
@@ -176,7 +178,6 @@
   #about img {
     width: 60%;
   }
-
 }
 
 /*Desktop queries*/
@@ -197,7 +198,6 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-    
   }
 
   #hero h1 {
@@ -210,5 +210,4 @@
   #about img {
     width: 80%;
   }
-
 }
