edit modal button

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -105,12 +105,13 @@
 }
 
 .corner-button button {
+  margin: var(--space-small);
   color: var(--color-very-dark-purple);
   font-weight: bolder;
   font-size: 20px;
   position: absolute;
-  left: 89%;
-  border: 2px solid var(--color-very-dark-purple);
+  left: 85%;
+  border: 2px solid white;
   background-color: white;
 }
 
@@ -135,7 +136,7 @@
   }
 
   .corner-button button {
-    left: 93%;
+    left: 91%;
   }
 }
 
@@ -161,6 +162,7 @@
   }
 
   .corner-button button {
-    left: 96%;
+    font-size: 22px;
+    left: 95%;
   }
 }
