--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -23,8 +23,9 @@
 }
 
 #modal-popup img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 300px;
+  height: 210px;
+  object-fit: cover;
 }
 
 #modal-popup {
